Updating brec-table properties to use !default to allow overriding them.

--- a/sass/_tables.scss
+++ b/sass/_tables.scss
@@ -1,6 +1,6 @@
-$odd-row-color: #f0f0f0;
-$even-row-color: #fafafa;
-$header-row-color:#ddd;
+$odd-row-color: #f0f0f0 !default;
+$even-row-color: #fafafa !default;
+$header-row-color: #ddd !default;
 
 
 .filters {
